Edit twitterLive; Add fetch from db Edit hosted_scrapping.py; extracting other fields from json

--- a/twitter sentiment analysis rough workings.ipynb
+++ b/twitter sentiment analysis rough workings.ipynb
@@ -2,16 +2,270 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pyodbc \n",
     "import mysql.connector as sqlcon \n",
     "import pandas as pd\n",
     "from datetime import datetime as dt, timedelta\n",
     "#from sqlalchemy import create_engine \n",
     "from dateutil.relativedelta import relativedelta \n",
-    "import numpy as np "
+    "import numpy as np \n",
+    "import git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQL Server connect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server = 'tcp:performancemlsvr.database.windows.net'\n",
+    "database = 'Sentiments'\n",
+    "username = 'performancemluser'\n",
+    "password = 'Pa$$w0rd'\n",
+    "driver = '{ODBC Driver 17 for SQL Server}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cnxn = pyodbc.connect(\n",
+    "        'DRIVER=' + driver + ';SERVER=' + server + ';PORT=1433;DATABASE=' + database + ';UID=' + username + ';PWD=' + password)\n",
+    "    mycursor = cnxn.cursor()\n",
+    "except Exception as e:\n",
+    "    with open('errors.txt', 'a') as f:\n",
+    "        f.write(str(e))\n",
+    "        f.write('\\n')\n",
+    "    sys.exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pyodbc.Cursor at 0x18e30dab2b0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mycursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "term='MondayMotivation'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_sql(\"SELECT * FROM siddy_sentiments WHERE term LIKE ? ORDER BY date DESC\", cnxn,\n",
+    "                 params=('%' + term + '%',))\n",
+    "#cnxn.close()\n",
+    "\n",
+    "#SELECT TOP number|percent column_name(s)\n",
+    "#FROM table_name\n",
+    "#WHERE condition;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Post_id</th>\n",
+       "      <th>Post</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Term</th>\n",
+       "      <th>Medium</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>661</td>\n",
+       "      <td>#MondayMotivation #OHIOSouthern https://t.co/w...</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MondayMotivation</td>\n",
+       "      <td>twitter</td>\n",
+       "      <td>2019-12-02 12:55:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>662</td>\n",
+       "      <td>RT @Sarojgabel: #GodMorningMonday\\nWithout wor...</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>-0.8224</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>MondayMotivation</td>\n",
+       "      <td>twitter</td>\n",
+       "      <td>2019-12-02 12:55:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>663</td>\n",
+       "      <td>\"Either you run the day, or the day runs you.\"...</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MondayMotivation</td>\n",
+       "      <td>twitter</td>\n",
+       "      <td>2019-12-02 12:55:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>657</td>\n",
+       "      <td>RT @Jaspritbumrah93: Ready to jump into this w...</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>0.6124</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MondayMotivation</td>\n",
+       "      <td>twitter</td>\n",
+       "      <td>2019-12-02 12:55:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>658</td>\n",
+       "      <td>Explore #ClaritySoftware modules to learn how ...</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>0.4404</td>\n",
+       "      <td>1</td>\n",
+       "      <td>MondayMotivation</td>\n",
+       "      <td>twitter</td>\n",
+       "      <td>2019-12-02 12:55:09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Post_id                                               Post Location  \\\n",
+       "0      661  #MondayMotivation #OHIOSouthern https://t.co/w...    Lagos   \n",
+       "1      662  RT @Sarojgabel: #GodMorningMonday\\nWithout wor...    Lagos   \n",
+       "2      663  \"Either you run the day, or the day runs you.\"...    Lagos   \n",
+       "3      657  RT @Jaspritbumrah93: Ready to jump into this w...    Lagos   \n",
+       "4      658  Explore #ClaritySoftware modules to learn how ...    Lagos   \n",
+       "\n",
+       "   Sentiment  Category              Term   Medium                Date  \n",
+       "0     0.0000         0  MondayMotivation  twitter 2019-12-02 12:55:10  \n",
+       "1    -0.8224        -1  MondayMotivation  twitter 2019-12-02 12:55:10  \n",
+       "2     0.0000         0  MondayMotivation  twitter 2019-12-02 12:55:10  \n",
+       "3     0.6124         1  MondayMotivation  twitter 2019-12-02 12:55:09  \n",
+       "4     0.4404         1  MondayMotivation  twitter 2019-12-02 12:55:09  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Donut chart values is :   1    337\n",
+      " 0    267\n",
+      "-1     59\n",
+      "Name: Category, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = df.Category.unique() #['Oxygen', 'Hydrogen', 'Carbon_Dioxide', 'Nitrogen']\n",
+    "#values = [4500, 2500, 1053, 500]\n",
+    "donut = df['Category'].value_counts()\n",
+    "print(\"Donut chart values is : \", donut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([1, 0, -1], dtype='int64')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "donut.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MySQL Server Connect"
    ]
   },
   {
@@ -58,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
